Code cleanup for inject-java (#10949)